--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
   ],
   "authors": [
     {
-      "name": "Abdullah Almsaeed"
+      "name": "Abdullah Almsaeed",
     },
     {
-      "name : "Christian Esperar"
+      "name : "Christian Esperar",
     }
   ],
   "license": "MIT"
