--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,7 @@
   ],
   "authors": [
     {
-      "name": "Abdullah Almsaeed",
-    },
-    {
-      "name : "Christian Esperar",
+      "name": "Abdullah Almsaeed and Christian Esperar",
     }
   ],
   "license": "MIT"
