--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   ],
   "authors": [
     {
-      "name": "Abdullah Almsaeed and Christian Esperar",
+      "name": "Abdullah Almsaeed and Christian Esperar"
     }
   ],
   "license": "MIT"
