--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "puikinsh/gentelella",
+  "name": "agusedyc/gentelella",
   "description": "Gentelella Admin is a free to use Bootstrap admin template",
   "homepage": "https://colorlib.com/polygon/gentelella/index.html",
   "keywords": [
